--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -19,6 +19,9 @@
 - email: janaki.vivrekar@berkeley.edu
   image: assets/images/staff_pics/janaki_vivrekar.jpeg
   name: Janaki Vivrekar
+- email: jinkyu.kim@berkeley.edu
+  image: assets/images/staff_pics/jinkyu_kim.jpeg
+  name: Jinkyu Kim
 - email: junseopark@berkeley.edu
   image: assets/images/staff_pics/junseo_park.png
   name: Junseo Park
